k3s-userapps/nextcloud/opencloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencloud
  namespace: opencloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: opencloud
  template:
    metadata:
      labels:
        app: opencloud
    spec:
      containers:
        - name: opencloud
          image: opencloudeu/opencloud:1.0.0
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c", "[ -f /etc/ocis/ocis.yaml ] || opencloud init --insecure true; opencloud server"]
          ports:
            - containerPort: 9200
              name: http
          volumeMounts:
            - name: config
              mountPath: /etc/ocis
            - name: data
              mountPath: /var/lib/ocis
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: opencloud-config
        - name: data
          persistentVolumeClaim:
            claimName: opencloud-data
