k3s-userapps/nextcloud/opencloud/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencloud
spec:
  ports:
    - port: 80
      targetPort: 9200
      name: http
  selector:
    app: opencloud
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencloud
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://opencloud.kirillorlov.pro"
    gethomepage.dev/group: Apps
    gethomepage.dev/name: OpenCloud
    gethomepage.dev/icon: opencloud.png
    gethomepage.dev/pod-selector: "app=opencloud"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: opencloud.kirillorlov.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opencloud
                port:
                  name: http
  tls:
    - hosts:
        - opencloud.kirillorlov.pro
      secretName: opencloud-tls
